--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj.filters
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj.filters
@@ -39,12 +39,18 @@
     <ClCompile Include="warning.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="bianyuan.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Hi_Opencv.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="warning.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="bianyuan.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
