图像直方图

--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj
@@ -118,11 +118,13 @@
     <ClCompile Include="bianyuan.cpp" />
     <ClCompile Include="Hi_Opencv.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="warning.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Hi_Opencv.h" />
   </ItemGroup>
   <ItemGroup>
+    <QtUic Include="E:\进击\opencv分类\Hi_Opencv\Hi_Opencv\Hi_Opencv\warning.ui" />
     <QtUic Include="Hi_Opencv.ui" />
   </ItemGroup>
   <ItemGroup>
@@ -130,6 +132,12 @@
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="bianyuan.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+    </QtMoc>
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="warning.h">
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
       <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|x64'">.\GeneratedFiles;.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
     </QtMoc>
