--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj.filters
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="bianyuan.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="warning.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Hi_Opencv.h">
@@ -47,9 +50,15 @@
     <QtMoc Include="bianyuan.h">
       <Filter>Header Files</Filter>
     </QtMoc>
+    <QtMoc Include="warning.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
   </ItemGroup>
   <ItemGroup>
     <QtUic Include="Hi_Opencv.ui">
+      <Filter>Form Files</Filter>
+    </QtUic>
+    <QtUic Include="E:\进击\opencv分类\Hi_Opencv\Hi_Opencv\Hi_Opencv\warning.ui">
       <Filter>Form Files</Filter>
     </QtUic>
   </ItemGroup>
