--- a/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj
+++ b/Hi_Opencv/Hi_Opencv/Hi_Opencv.vcxproj
@@ -31,7 +31,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
     <IncludePath>C:\Users\fenglin\Desktop\Hi_Opencv\Hi_Opencv\Resources;C:\Users\fenglin\Desktop\opencv\build\include\opencv2;C:\Users\fenglin\Desktop\opencv\build\include\opencv;C:\Qt\Qt5.9.2\5.9.2\msvc2017_64\include;C:\Users\fenglin\Desktop\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Qt\Qt5.9.2\5.9.2\msvc2017_64\lib;C:\Users\fenglin\Desktop\opencv\build\x64\vc15\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Qt\Qt5.9.2\5.9.2\msvc2017_64\lib;C:\Users\fenglin\Desktop\opencv\build\x64\vc15\lib;C:\Qt\Qt5.9.2\5.9.2\msvc2017_64\include;C:\Users\fenglin\Desktop\opencv\build\include;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <OutDir>$(SolutionDir)$(Platform)\$(Configuration)\</OutDir>
@@ -66,7 +66,7 @@
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
       <AdditionalLibraryDirectories>$(QTDIR)\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;opencv_world411d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;Qt5Guid.lib;Qt5Widgetsd.lib;opencv_world411d.lib;opencv_world411.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <QtMoc>
       <OutputFile>.\GeneratedFiles\$(ConfigurationName)\moc_%(Filename).cpp</OutputFile>
